--- a/src/main/resources/templates/comp/resumeList.mustache
+++ b/src/main/resources/templates/comp/resumeList.mustache
@@ -13,13 +13,14 @@
 		<div class="d-flex justify-content-center">
 			<h5 class="align-self-center">이 공고에 지원한 지원자입니다. :</h5>
 
-			<a href="/comp/posting/{{posting.id}}" class="btn btn-info m-2">
+			<a href="javascript:void(0);" class="btn btn-info m-2" onclick="openNewWindow('/comp/posting/newWindow/{{posting.id}}')">
 				<div class="">
-					<span class="fw-bold">{{posting.position}}</span>
-					<span class="badge bg-black">D-{{#posting.expiryDate}}{{posting.expiryDate}}{{/posting.expiryDate}}</span>
+					<div class="fw-bold">{{posting.title}}</div>
+					<span class="badge bg-secondary">{{posting.position}}</span>
+					<span class="expiryDate badge bg-black">{{#posting.expiryDate}}{{posting.expiryDate}}{{/posting.expiryDate}}</span>
 				</div>
-				<div class="mb-1">
-					{{#posting.postingSkill}}<span class="badge bg-primary me-1">{{skill}}</span>{{/posting.postingSkill}}
+				<div class="">
+					{{#posting.postingSkill}}<span class="badge bg-primary me-1">{{skill.skillname}}</span>{{/posting.postingSkill}}
 				</div>
 				<div>
 					{{#posting.career}}<span class="badge bg-success">{{posting.career}}</span>{{/posting.career}}
@@ -48,7 +49,7 @@
 				  <tr>
 					<th class="text-center" scope="row">1</th>
 					<td class="text-center">홍길동</td>
-					<td class="text-center"><a href="/resume/1" class="">이력서1</a></td>
+					<td class="text-center"><a href="javascript:void(0);" class="" onclick="openNewWindow('/resume/newWindow/{{posting.id}}')">이력서1</a></td>
 					<td class="text-center">신입</td>
 					<td class="text-center">대기중</td>
 					<td class="text-center">
@@ -93,6 +94,63 @@
 
 
 		</div>
+
+
+
+
+
+		<script>
+
+
+
+	function openNewWindow(url) {
+	  var width = 600; // 새 창의 가로 크기
+	  var height = 1100; // 새 창의 세로 크기
+	  var left = (window.innerWidth - width) / 2; // 화면 중앙에 위치
+	  var top = (window.innerHeight - height) / 2; // 화면 중앙에 위치
+	
+	  var options = 'width=' + width + ',height=' + height + ',left=' + left + ',top=' + top;
+	  window.open(url, '새 창', options);
+	}
+
+
+
+
+			function Ddaycheck(day){
+				if(typeof day === "string"){
+					let day2 = new Date(day);
+					return Ddaycheck(day2);
+				} else{
+					let today = new Date();
+		
+					console.log((day-today) / (1000 * 60 * 60 * 24));
+					let DDay = Math.ceil( (day-today) / (1000 * 60 * 60 * 24));
+		
+					if(DDay==0){
+						console.log("D-Day");
+						return "D-Day";
+					}
+					else if(DDay<0){
+						console.log("만료");
+						return "만료";
+					}
+					else{
+						console.log("D-"+DDay); 
+						return "D-"+DDay;
+					}
+				}
+			}
+		
+		
+		
+			let day = document.querySelectorAll('.expiryDate');
+			day.forEach(element => {
+				element.textContent = Ddaycheck(element.textContent);
+			});
+		
+		
+		</script>
+		
 
 
 
