--- a/src/main/resources/templates/comp/postingDetailOnly.mustache
+++ b/src/main/resources/templates/comp/postingDetailOnly.mustache
@@ -1,4 +1,42 @@
-{{> layout/header}}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>Brand</title>
+	<meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<link
+		href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+		rel="stylesheet"
+	/>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<link
+		href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css"
+		rel="stylesheet"
+	/>
+	<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+
+    {{^sessionComp}}<style></style>{{/sessionComp}}
+
+    {{#sessionComp}}{{^sessionComp.compname}}<style>
+      .bg-info{ background-color: pink !important; }
+      .border-info{ border-color: pink !important; }
+      .btn-info{ border-color: pink; background-color: pink !important; }
+      .btn-info:hover { border-color: pink !important; }
+    </style>{{/sessionComp.compname}}{{/sessionComp}}
+
+    {{#sessionComp.compname}}<style>
+      .bg-info{ background-color: silver !important; }
+      .border-info{ border-color: silver !important; }
+      .btn-info{ border-color: silver; background-color: silver !important; }
+      .btn-info:hover { border-color: silver !important; }
+    </style>{{/sessionComp.compname}}
+  </head>
+
+<body class="d-flex flex-column min-vh-100 d-flex flex-column justify-content-center">
+
+
+
 
 <!-- 21번 -->
 
@@ -6,12 +44,12 @@
 
 
 
-		<div class="col-auto container border border-info mb-2">
+		<div class="container border border-info">
 			<h1 class="text-center mt-2">공고</h1>
 
 			<div class="d-flex">
-				<div class="m-1 col-4 d-flex flex-column align-items-center overflow-hidden" style="width:170px; height:280px;">
-					<img src="../../../images/{{posting.user.compname}}_logo.png" class=""/>
+				<div class="m-1 col-4 d-flex flex-column img-fluid d-block m-auto" style="width:178px; height:280px;">
+					<img src="../../../images/{{posting.user.photo}}" class=""/>
 				</div>
 
 				<div class="col-8 p-2">
@@ -39,42 +77,42 @@
 
 			</div>
 
-			<div class="input-group mb-3 ms-1">
+			<div class="input-group mb-3">
 				<span class="input-group-text">공고명</span>
 				<input type="text" class="form-control" value="{{posting.title}}" disabled>
 			</div>
 
-			<div class="input-group mb-3 ms-1">
+			<div class="input-group mb-3">
 				<span class="input-group-text">공고내용</span>
 				<textarea class="form-control" rows="5" disabled>{{posting.desc}}</textarea>
 			</div>
 
-			<div class="input-group mb-3 ms-1">
+			<div class="input-group mb-3">
 				<span class="input-group-text">직무</span>
 				<input type="text" class="form-control" value="{{posting.position}}" disabled>
 			</div>
 
-			<div class="input-group mb-3 ms-1">
+			<div class="input-group mb-3">
 				<span class="input-group-text">기술</span>
 				<input type="text" class="form-control" value="{{#posting.postingSkill}}{{skill.skillname}}, {{/posting.postingSkill}}" disabled>
 			</div>
 
-			<div class="input-group mb-3 ms-1">
+			<div class="input-group mb-3">
 				<span class="input-group-text">학력</span>
 				<input type="text" class="form-control" value="{{#posting.education}}{{posting.education}}{{/posting.education}}" disabled>
 			</div>
 
-			<div class="input-group mb-3 ms-1">
+			<div class="input-group mb-3">
 				<span class="input-group-text">연차</span>
 				<input type="text" class="form-control" value="{{#posting.career}}{{posting.career}}{{/posting.career}}" disabled>
 			</div>
 
-			<div class="input-group mb-3 ms-1">
+			<div class="input-group mb-3">
 				<span class="input-group-text">지역</span>
 				<input type="text" class="form-control" value="{{#posting.region}}{{posting.region}}{{/posting.region}}" disabled>
 			</div>
 
-			<div class="input-group mb-3 ms-1">
+			<div class="input-group mb-3">
 				<span class="input-group-text">종료일</span>
 				<input type="text" class="form-control" value="{{#posting.expiryDate}}{{posting.expiryDate}}{{/posting.expiryDate}}" disabled>
 			</div>
@@ -94,6 +132,5 @@
 
 
 
-
-
-{{> layout/footer}}
+	</body>
+</html>
