--- a/src/main/resources/templates/comp/postingList.mustache
+++ b/src/main/resources/templates/comp/postingList.mustache
@@ -9,16 +9,17 @@
 			<h1 class="text-center mt-2">공고관리</h1>
 
 			
-			
+
 
 			{{#postingList}}
 			<div class="d-flex border border-info m-3 p-2 justify-content-between">
-				<a href="/comp/posting/{{id}}" class="btn btn-info">
+				<a href="javascript:void(0);" class="btn btn-info" onclick="openNewWindow('/comp/posting/newWindow/{{id}}')">
 					<div class="">
-						<span class="fw-bold">{{position}}</span>
-						<span class="badge bg-black">D-{{#expiryDate}}{{expiryDate}}{{/expiryDate}}</span>
+						<div class="fw-bold">{{title}}</div>
+						<span class="badge bg-secondary">{{position}}</span>
+						<span class="expiryDate badge bg-black">{{#expiryDate}}{{expiryDate}}{{/expiryDate}}</span>
 					</div>
-					<div class="mb-1">
+					<div class="">
 						{{#postingSkill}}<span class="badge bg-primary me-1">{{skill.skillname}}</span>{{/postingSkill}}
 					</div>
 					<div>
@@ -28,9 +29,9 @@
 					</div>
 				</a>
 
-				<h3>{{title}}</h3>
+				<div class="col-6">{{desc}}</div>
 
-				<div class="d-flex flex-column">
+				<div class="d-flex flex-column justify-content-between">
 					<a href="/comp/posting/{{id}}/resumeList" class="btn btn-success btn-sm mb-1">지원자 보기</a>
 					<a href="/comp/posting/{{id}}/updateForm" class="btn btn-warning btn-sm mb-1">수정하기</a>
 					<form action="/comp/posting/{{id}}/delete" method="post">
@@ -46,6 +47,59 @@
 
 
 
+
+
+<script>
+
+
+	function openNewWindow(url) {
+	  var width = 600; // 새 창의 가로 크기
+	  var height = 1100; // 새 창의 세로 크기
+	  var left = (window.innerWidth - width) / 2; // 화면 중앙에 위치
+	  var top = (window.innerHeight - height) / 2; // 화면 중앙에 위치
+	
+	  var options = 'width=' + width + ',height=' + height + ',left=' + left + ',top=' + top;
+	  window.open(url, '새 창', options);
+	}
+
+
+
+
+
+	function Ddaycheck(day){
+		if(typeof day === "string"){
+			let day2 = new Date(day);
+			return Ddaycheck(day2);
+		} else{
+			let today = new Date();
+
+			console.log((day-today) / (1000 * 60 * 60 * 24));
+			let DDay = Math.ceil( (day-today) / (1000 * 60 * 60 * 24));
+
+			if(DDay==0){
+				console.log("D-Day");
+				return "D-Day";
+			}
+			else if(DDay<0){
+				console.log("만료");
+				return "만료";
+			}
+			else{
+				console.log("D-"+DDay); 
+				return "D-"+DDay;
+			}
+		}
+	}
+
+
+
+	let day = document.querySelectorAll('.expiryDate');
+	day.forEach(element => {
+		element.textContent = Ddaycheck(element.textContent);
+	});
+
+
+</script>
 
 
 
