--- a/src/main/resources/templates/comp/resumeDetailOnly.mustache
+++ b/src/main/resources/templates/comp/resumeDetailOnly.mustache
@@ -1,15 +1,55 @@
-{{> layout/header}}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>Brand</title>
+	<meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<link
+		href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+		rel="stylesheet"
+	/>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<link
+		href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css"
+		rel="stylesheet"
+	/>
+	<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+
+    {{^sessionComp}}<style></style>{{/sessionComp}}
+
+    {{#sessionComp}}{{^sessionComp.compname}}<style>
+      .bg-info{ background-color: pink !important; }
+      .border-info{ border-color: pink !important; }
+      .btn-info{ border-color: pink; background-color: pink !important; }
+      .btn-info:hover { border-color: pink !important; }
+    </style>{{/sessionComp.compname}}{{/sessionComp}}
+
+    {{#sessionComp.compname}}<style>
+      .bg-info{ background-color: silver !important; }
+      .border-info{ border-color: silver !important; }
+      .btn-info{ border-color: silver; background-color: silver !important; }
+      .btn-info:hover { border-color: silver !important; }
+    </style>{{/sessionComp.compname}}
+  </head>
+
+<body class="d-flex flex-column min-vh-100 d-flex flex-column justify-content-center">
+
+
+
+
 <!-- 25번 -->
 
 
 
 
-		<div class="col-auto container border border-info mb-2">
+
+		<div class="container border border-info">
 			<h1 class="text-center mt-2">이력서 상세보기</h1>
 
 			<div class="d-flex">
 				<div class="m-1 col-4 d-flex flex-column img-fluid d-block m-auto" style="width:178px; height:165px;">
-					<img src="../../../images/basic.jpg" class="img-fluid rounded-circle"/>
+					<img src="../../../images/basic.jpg" class="rounded-circle"/>
 				</div>
 
 				<div class="col-8 p-2">
@@ -64,5 +104,5 @@
 
 
 
-		
-{{> layout/footer}}
+	</body>
+</html>
