--- a/src/main/resources/templates/layout/footer.mustache
+++ b/src/main/resources/templates/layout/footer.mustache
@@ -10,9 +10,9 @@
 
 	<div class="d-flex justify-content-center p-3">
 		<div class="ms-5 mt-3" style="font-size: 14px; line-height: 0.6">
-			<p>(주)원티드랩 (대표이사:이복기) | 서울특별시 송파구 올림픽로 300 롯데월드타워 35층 | 통신판매번호 : 2020-서울송파-3147</p>
+			<p>(주)원티드랩 (대표이사:홍길동) | 서울특별시 송파구 올림픽로 123 롯데월드타워 123층 | 통신판매번호 : 123456</p>
 			<br/>
-			<p>유료직업소개사업등록번호 : (국내) 제2020-3230259-14-5-00018호 | 사업자등록번호 : 299-86-00021 | 02-539-7118</p>
+			<p>유료직업소개사업등록번호 : (국내) 제123456호 | 사업자등록번호 : 1234 | 02-1234-5678</p>
 			<br/>
 			<p>© Wantedlab, Inc.</p>
 		</div>
