--- a/src/main/resources/templates/comp/resumeList.mustache
+++ b/src/main/resources/templates/comp/resumeList.mustache
@@ -46,6 +46,9 @@
 				  </tr>
 				</thead>
 				<tbody>
+
+
+				  {{#resumeList}}
 				  <tr>
 					<th class="text-center" scope="row">1</th>
 					<td class="text-center">홍길동</td>
@@ -57,6 +60,9 @@
 						<button class="badge bg-danger" type="button">불합격</button>
 					</td>
 				  </tr>
+				  {{/resumeList}}
+
+
 				  <tr>
 					<th class="text-center" scope="row">2</th>
 					<td class="text-center"></td>
