--- a/src/main/resources/templates/layout/footer.mustache
+++ b/src/main/resources/templates/layout/footer.mustache
@@ -4,7 +4,7 @@
 		<a href="#" class="col-auto text-decoration-none text-white">회사소개</a>
 		<a href="#" class="col-auto text-decoration-none text-white">이용약관</a>
 		<a href="#" class="col-auto text-decoration-none text-white">개인정보처리방침</a>
-		<a href="#" class="col-auto text-decoration-none text-white">고객센터</a>
+		<a href="/master/help" class="col-auto text-decoration-none text-white">고객센터</a>
 		<div class="col-1"></div>
 	</div>
 
