--- a/src/main/resources/templates/comp/PostingDetail.mustache
+++ b/src/main/resources/templates/comp/PostingDetail.mustache
@@ -56,7 +56,7 @@
 
 			<div class="input-group mb-3">
 				<span class="input-group-text">기술</span>
-				<input type="text" class="form-control" value="{{#posting.postingSkill}}{{skill.skillname}}, {{/posting.postingSkill}}" disabled>
+				<input type="text" class="form-control comma" value="{{#posting.postingSkill}}{{skill.skillname}}, {{/posting.postingSkill}}" disabled>
 			</div>
 
 			<div class="input-group mb-3">
@@ -92,6 +92,15 @@
 
 
 
+		<script>
+			
+			let comma = document.querySelector(".comma");
+			console.log(comma.value);
+			comma.value = comma.value.slice(0, -2);
+			console.log(comma.value);
+
+
+		</script>
 
 
 
