--- a/src/main/resources/templates/comp/resumeDetail.mustache
+++ b/src/main/resources/templates/comp/resumeDetail.mustache
@@ -9,7 +9,7 @@
 
 			<div class="d-flex">
 				<div class="m-1 col-4 d-flex flex-column img-fluid d-block m-auto" style="width:167px; height:165px;">
-					<img src="../../../images/basic.jpg" class="img-fluid rounded-circle"/>
+					<img src="../../../images/{{resume.user.photo}}" class="img-fluid rounded-circle"/>
 				</div>
 
 				<div class="col-8 p-2">
@@ -45,7 +45,7 @@
 
 			<div class="input-group mb-3">
 				<span class="input-group-text">보유기술</span>
-				<input type="text" class="form-control" value="" disabled>
+				<input type="text" class="form-control comma" value="{{#resume.user.userSkillList}}{{skill.skillname}}, {{/resume.user.userSkillList}}" disabled>
 			</div>
 
 			<div class="input-group mb-3">
@@ -67,6 +67,15 @@
 		</div>
 
 
+		<script>
+			
+			let comma = document.querySelector(".comma");
+			console.log(comma.value);
+			comma.value = comma.value.slice(0, -2);
+			console.log(comma.value);
+
+
+		</script>
 
 
 		
