--- a/src/main/resources/templates/comp/resumeDetailOnly.mustache
+++ b/src/main/resources/templates/comp/resumeDetailOnly.mustache
@@ -49,7 +49,7 @@
 
 			<div class="d-flex">
 				<div class="m-1 col-4 d-flex flex-column img-fluid d-block m-auto" style="width:178px; height:165px;">
-					<img src="../../../images/basic.jpg" class="rounded-circle"/>
+					<img src="../../../images/{{resume.user.photo}}" class="rounded-circle"/>
 				</div>
 
 				<div class="col-8 p-2">
@@ -85,7 +85,7 @@
 
 			<div class="input-group mb-3">
 				<span class="input-group-text">보유기술</span>
-				<input type="text" class="form-control" value="" disabled>
+				<input type="text" class="form-control comma" value="{{#resume.user.userSkillList}}{{skill.skillname}}, {{/resume.user.userSkillList}}" disabled>
 			</div>
 
 			<div class="input-group mb-3">
@@ -108,6 +108,16 @@
 
 
 
+
+		<script>
+			
+			let comma = document.querySelector(".comma");
+			console.log(comma.value);
+			comma.value = comma.value.slice(0, -2);
+			console.log(comma.value);
+
+
+		</script>
 
 	</body>
 </html>
