--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -80,9 +80,8 @@
 									{{#sessionComp.compname}}<a class="nav-link text-white" href="/comp/{{sessionComp.userId}}/postingList">채용공고관리</a>{{/sessionComp.compname}}
 								</li>
 								<li class="nav-item">
-									<a class="nav-link text-white" href="/user/applyList"
-									>지원내역</a
-									>
+									{{^sessionComp.compname}}<a class="nav-link text-white" href="/user/applyList">지원내역</a>{{/sessionComp.compname}}
+									{{#sessionComp.compname}}<a class="nav-link text-white" href="/comp/{{sessionComp.userId}}/bookmarkList">인재추천</a>{{/sessionComp.compname}}
 								</li>
 								<li class="nav-item">
 									<a class="nav-link text-white" href="/master/help">고객센터</a>
